<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_map_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hro.router.SettingsActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/alarm_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:text="13751823091"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:hint="@string/alarm_phone_hint"
                android:id="@+id/alarm_phone" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/alarm_dist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:text="5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:hint="@string/alarm_dist_hint"
                android:id="@+id/alarm_dist" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/tim_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:hint="@string/tim_account_hint"
                android:text="hrorouter1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/tim_account" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <CheckBox
                android:text="是否自动监控"
                android:layout_column="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/isMonitor"
                android:checked="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/settingSaveBtn"
                android:layout_column="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settingSave"/>
        </TableRow>

    </TableLayout>
</FrameLayout>
